apps/transmission/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
