apps/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-httproute
  namespace: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  hostnames:
  - "transmission.${DOMAIN}"
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: transmission
      port: 9091
